--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- ✅ Open Graph Meta Tags (for social sharing) -->
     <meta property="og:title" content="CommitNexus – Seamless Data Sharing & AI File Management" />
     <meta property="og:description" content="Share and manage your files with AI-powered tools and encrypted cloud storage." />
-    <meta property="og:image" content="%PUBLIC_URL%/datahubara2.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/commitnexus.png" />
     <meta property="og:url" content="https://commitenexus.xyz" />
     <meta property="og:type" content="website" />
 
